# tldns

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  generate_cert.sh  pyproject.toml
.github/workflows/: ci-cd.yml
tests/: conftest.py  test_performance.py  test_protocol.py  test_server.py
tldns/: __init__.py  server.py
